# omni-utils

./: Cargo.toml  README.md
.github/workflows/: secutity-analysis.yml  test.yml
omni-utils/: Cargo.toml
omni-utils-derive/: Cargo.toml
omni-utils-derive/src/: error_display.rs  lib.rs  trusted_relayer.rs
omni-utils/src/: lib.rs  near_expect.rs  promise.rs  trusted_relayer.rs
omni-utils/tests/: trusted_relayer.rs
tests/test-contract/: Cargo.toml
tests/test-contract-custom/: Cargo.toml
tests/test-contract-custom/src/: lib.rs
tests/test-contract/src/: lib.rs
