[workspace]
resolver = "2"
members = ["omni-utils", "omni-utils-derive"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Near-One/omni-utils"

[workspace.dependencies]
quote = "1"
serde = "1"
serde_json = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
near-sdk = { version = ">=5.24.0", features = ["non-contract-usage"] }

omni-utils = { path = "omni-utils" }
omni-utils-derive = { path = "omni-utils-derive" }
